--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
       <div class="mode-selector">
         <label for="preco-geral"></label>
         <select id="preco-geral">
-          <option value="padrao">Preço Padrão</option>
-          <option value="parceria">Preço Parceria</option>
+          <option value="padrao">Sem Parceria</option>
+          <option value="parceria">Com Parceria</option>
         </select>
       </div>
 
