--- a/index.html
+++ b/index.html
@@ -157,32 +157,32 @@
       <img src="https://i.imgur.com/KCGCPCb.png" alt="" />
 
       <!-- Lista suspensa das parcerias -->
-      <div class="dropdown-empresas">
-        <label for="empresas-parceria"></label>
-        <select id="empresas-parceria">
-          <option value="Consultar">Consultar Parceria</option>
-          <option value="diamond">Diamond</option>
-          <option value="ghost">Ghost</option>
-          <option value="tropado7">Tropa do 7</option>
-          <option value="quatrom">4M</option>
-          <option value="has">Has</option>
-          <option value="irmaosmetralha">Irmãos Metralha</option>
-          <option value="reddragon">RedDragon</option>
-          <option value="colombia">Colombia</option>
-          <option value="escocia">Escocia</option>
-          <option value="tabila">Talibã</option>
-          <option value="tropadogelo">Tropa do Gelo</option>
-          <option value="crips">Crips</option>
-          <option value="medelin">Medelin</option>
-          <option value="mexico">México</option>
-          <option value="yakusa">Yakusa</option>
-          <option value="tpmaguinatas">Tropa dos maguinatas</option>
-          <option value="vidarasa">Vida Rasa</option>
-          <option value="fluxocustons">Fluxo Custons</option>
-          <option value="noway">Noway</option>
-          <option value="oi">--</option>
-        </select>
-      </div>
+      <!-- <div class="dropdown-empresas"> -->
+        <!-- <label for="empresas-parceria"></label> -->
+        <!-- <select id="empresas-parceria"> -->
+          <!-- <option value="Consultar">Consultar Parceria</option> -->
+          <!-- <option value="diamond">Diamond</option> -->
+          <!-- <option value="ghost">Ghost</option> -->
+          <!-- <option value="tropado7">Tropa do 7</option> -->
+          <!-- <option value="quatrom">4M</option> -->
+          <!-- <option value="has">Has</option> -->
+          <!-- <option value="irmaosmetralha">Irmãos Metralha</option> -->
+          <!-- <option value="reddragon">RedDragon</option> -->
+          <!-- <option value="colombia">Colombia</option> -->
+          <!-- <option value="escocia">Escocia</option> -->
+          <!-- <option value="tabila">Talibã</option> -->
+          <!-- <option value="tropadogelo">Tropa do Gelo</option> -->
+          <!-- <option value="crips">Crips</option> -->
+          <!-- <option value="medelin">Medelin</option> -->
+          <!-- <option value="mexico">México</option> -->
+          <!-- <option value="yakusa">Yakusa</option> -->
+          <!-- <option value="tpmaguinatas">Tropa dos maguinatas</option> -->
+          <!-- <option value="vidarasa">Vida Rasa</option> -->
+          <!-- <option value="fluxocustons">Fluxo Custons</option> -->
+          <!-- <option value="noway">Noway</option> -->
+          <!-- <option value="oi">--</option> -->
+        <!-- </select> -->
+      <!-- </div> -->
 
       <!-- Escolha entre parceria ou valor padrão para todos os itens -->
       <div class="mode-selector">
@@ -270,8 +270,8 @@
       </div>
       <div class="result">
         <p id="valorTotal">Total</p>
-        <p id="lucro">Lucro</p>
-        <p id="gerente">Repassar</p>
+        <!-- <p id="lucro">Lucro</p> -->
+        <!-- <p id="gerente">Repassar</p> -->
       </div>
 
       <div class="footer">
@@ -416,8 +416,8 @@
 
         // Limpar os resultados na tela
         document.getElementById("valorTotal").innerText = "Total 0,00";
-        document.getElementById("lucro").innerText = "Lucro 0,00";
-        document.getElementById("gerente").innerText = "Repassar 0,00";
+        <!-- document.getElementById("lucro").innerText = "Lucro 0,00"; -->
+        <!-- document.getElementById("gerente").innerText = "Repassar 0,00"; -->
       }
     </script>
   </body>
