--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
       <div class="footer">
         <p class="cred">
-          Correções feitas por
+          Desenvolvido por
           <a href="" target="_blank"
             >Kyra</a
           >
