--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       <div class="footer">
         <p class="cred">
           Desenvolvido por
-          <a href="" target="_blank"
+          <a href="https://www.instagram.com/j_costa94/" target="_blank"
             >Kyra</a
           >
         </p>
